git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1124 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -463,6 +463,7 @@ fr-FR:
         sale_orders_invoice: 'Facturer directement tout le devis'
         sale_orders_print: 'Imprimer le devis'
         sales_deliveries: 'Livraisons'
+        subscriptions: 'Abonnements'
         title: 'Sélection des produits pour le devis {{sale_order}} de : {{client}}'
         total: 'Total'
       shelves:
