--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -423,6 +423,8 @@ fr-FR:
     no_records: 'Pas d''enregistrements'
     previous: Précédent
     print: Imprimer
+    record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement.'
+    record_has_not_been_removed: 'L''enregistrement n''a pu être supprimé.'
     search: Rechercher
     search_go: Lancer la recherche
     submit: Envoyer
