--- a/config/locales/fr-FR/help/management-sale_order_summary.txt
+++ b/config/locales/fr-FR/help/management-sale_order_summary.txt
@@ -6,6 +6,6 @@ Vous avez accès à un récapitulatif des paiements relatifs à la vente. Vous p
 * *Supprimer* un paiement : {{buttons/delete.png|supprimer}}
 
 
-Le tableau "État de la vente" récapitule les différents règlements et factures relatifs à la vente et le montant total de ceux-cis.
+Le tableau "État de la vente" récapitule les différents règlements et factures relatifs à la vente et le montant total de ceux-ci.
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
