Renames action sales_details to sale_order. Updates embankments.
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1143 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -408,7 +408,7 @@ fr-FR:
         supply: 'Livraison'
         title: 'Livraisons'
         undelivered: 'Reste à livrer'
-      sales_details:
+      sale_order:
         deliveries: 'Livraisons'
         general_informations: 'Informations générales'
         invoices: 'Factures'
