git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1147 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.accountancy.yml
+++ b/config/locales/fr-FR.pack.accountancy.yml
@@ -60,7 +60,7 @@ fr-FR:
         journal_name: 'Journal'
         record_number: 'Pièce'
         recorded_on: 'Date'
-        title: 'LETTRAGE du compte N° {{value1}}'
+        title: 'Lettrage du compte N° {{value1}}'
       accounts_letter_launch:
         select_account: 'Sélectionnez un compte:'
         title: 'Lettrage de compte'
