git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1149 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -215,7 +215,7 @@ fr-FR:
           other: '{{count}} factures enregistrées'
           zero: 'Aucune facture enregistrée'
         title: 'Factures'
-      invoices_cancel:
+      invoice_cancel:
         already_credited_quantity: 'Qté. déjà passée en avoir'
         price_amount: 'Prix HT'
         price_amount_with_taxes: 'Prix TTC'
@@ -225,7 +225,7 @@ fr-FR:
         total_quantity: 'Qté. totale'
         unit: 'Unité'
         validate: 'Valider'
-      invoices_display:
+      invoice:
         credits: 'Avoirs'
         invoice_lines: 'Lignes de la facture'
         title: 'Facture : {{number}}'
