--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -851,6 +851,7 @@ fr-FR:
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
+        credited_quantity: 'Quantité déjà passée en avoir'
         entity_id: (((ENTITY_ID)))
         id: 'ID'
         invoice_id: 'Facture'
