--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -225,10 +225,10 @@ fr-FR:
         total_quantity: 'Qté. totale'
         unit: 'Unité'
         validate: 'Valider'
-      invoices_display:
+      invoice:
         credits: 'Avoirs'
         invoice_lines: 'Lignes de la facture'
-        title: 'Facture : {{number}}'
+        title: 'Facture {{number}}'
       _invoices_search:
         search: 'Rechercher une facture par son numéro'
       _location_choice:
@@ -414,9 +414,10 @@ fr-FR:
         invoices: 'Factures'
         payments: 'Règlements'
         payment_create: 'Ajouter un règlement'
-        sale_order_lines: 'Lignes de vente'
+        lines: 'Lignes de vente'
         sale_order_print: 'Imprimer la vente'
         sale_order_lines: 'Modifier la vente'
+        subscriptions: Abonnements
         title: 'Détails de la vente {{value}} au client {{name}}'
       sale_order_create:
         title: 'Création de la vente'
