git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1158 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -828,6 +828,7 @@ fr-FR:
         credit: 'Avoir'
         currency_id: (((CURRENCY_ID)))
         downpayment_amount: 'Montant de l''acompte'
+        facture: 'Facture'
         has_downpayment: 'A un acompte'
         id: 'ID'
         lock_version: 'Version'
