git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1160 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -839,6 +839,7 @@ fr-FR:
         paid: 'Réglée'
         payment_delay_id: 'Délai de paiement'
         payment_on: 'A régler au plus tard le'
+        sale: 'Vente'
         sale_order: 'Vente'
         sale_order_id: 'Vente'
         updated_at: 'Mis à jour le'
