Adds some test files and renames bad actions
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1163 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -268,7 +268,7 @@ fr-FR:
         locked: 'Verrouillée'
         name: 'Nom'
         purchases_journal: 'Journal d''achats'
-        sales: 'Ventes'
+        sale_orders: 'Ventes'
         sales_conditions: 'Conditions Générales de Vente'
         sales_journal: 'Journal de Ventes'
         siren: 'Numéro SIREN'
