--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -142,7 +142,7 @@ fr-FR:
       error_journal_statement: 'Le relevé bancaire est spécifique à un journal.'
       error_account_children: 'Le compte comptable ne peut pas être supprimé car il contient des sous-comptes'                                   
     company:
-      sales: Ventes
+      sale_orders: Ventes
       default:
         bank_journal_nature_name: Banque
         category: Par défaut
@@ -173,8 +173,8 @@ fr-FR:
         invoicing_numeration: Numéros de facture
         journals:
           bank: Journal de banque
-          purchases: 'Journal d''achats'
-          sales: Journal de ventes
+          purchase_orders: 'Journal d''achats'
+          sale_orders: Journal de ventes
         price_list_name: Tarif normal
         role:
           name:
