--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -229,6 +229,7 @@ fr-FR:
         credits: 'Avoirs'
         invoice_lines: 'Lignes de la facture'
         invoice_print: 'Imprimer la facture'
+        invoice_cancel: 'Faire un avoir sur la facture'
         title: 'Facture {{number}}'
       _invoices_search:
         search: 'Rechercher une facture par son numéro'
@@ -280,8 +281,8 @@ fr-FR:
         display: 'Afficher :'
         prices_export: 'Tout exporter au format CSV'
         prices_import: 'Importer un fichier CSV'
-        purchases_price_create: 'Ajouter un prix d''achat '
-        sales_price_create: 'Ajouter un prix de vente'
+        purchase_order_price_create: 'Ajouter un prix d''achat '
+        sale_order_price_create: 'Ajouter un prix de vente'
         supplier: 'Les prix d''achat du fournisseur'
         title: 'Liste des prix'
       price_create:
