Updates some things
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1192 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1029,13 +1029,13 @@ fr-FR:
         account_number: 'Numéro de compte'
         amount: 'Montant'
         bank: 'Banque'
-        check_number: 'Numéro de chèque'
+        check_number: 'N°Chèque'
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
         downpayment: 'Acompte'
         embanker_id: 'Encaisseur'
-        embankment_id: (((EMBANKMENT_ID)))
+        embankment_id: 'Encaissement'
         entity_id: 'Client'
         id: 'ID'
         lock_version: 'Version'
