improve products search, begin to implement transports
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1193 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.company.yml
+++ b/config/locales/fr-FR.pack.company.yml
@@ -183,6 +183,8 @@ fr-FR:
         rights: 'Droits'
         subtitle: 'Renseignez les différentes caractéristiques de l''utilisateur'
         title: 'Gestion des employés'
+      _users_form:
+        employee:  'Créer automatiquement une fiche employé'
       user_update:
         title: 'Modification de l''utilisateur'
       welcome:
