transports, complete help
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1197 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1625,6 +1625,7 @@ fr-FR:
         comment: 'Commentaire'
         company_id: 'Société'
         created_at: 'Créé le'
+        created_on: 'Créé le'
         creator_id: 'Créateur'
         id: 'ID'
         lock_version: 'Version'
