update_transports, add columns responsible & transport_on
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1199 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1629,6 +1629,8 @@ fr-FR:
         creator_id: 'Créateur'
         id: 'ID'
         lock_version: 'Version'
+        responsible_id: 'Responsable'
+        transport_on: 'Transport le'
         transporter_id: 'Transporteur'
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
