--- a/config/locales/fr-FR.rights.yml
+++ b/config/locales/fr-FR.rights.yml
@@ -29,7 +29,6 @@ fr-FR:
     manage_delays: 'Gérer les délais'
     manage_delivery_modes: 'Gérer les types de livraison'
     manage_districts: 'Gérer les districts'
-    manage_document_natures: 'Gérer les types de modèles de document'
     manage_document_templates: 'Gérer les modèles de document'
     manage_embankments: 'Gérer les remises de chèques'
     manage_entities: 'Gérer les fiches clients/fournisseurs'
@@ -39,6 +38,7 @@ fr-FR:
     manage_entries: 'Gérer les écritures'
     manage_events: 'Gérer les évènements'
     manage_financialyears: 'Gérer les exercices'
+    manage_inventories: (((MANAGE_INVENTORIES)))
     manage_invoicing: 'Gérer la facturation et les règlements'
     manage_journals: 'Gérer les journaux'
     manage_listings: 'Gérer les extractions'
