Add e-mailing support
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1218 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -225,7 +225,7 @@ fr-FR:
     delivery_line: 
       error_undelivered_quantity: 'La quantité de produit {{product}} à livrer dépasse la quantité commandée'
       sale: 'Vente {{number}}'
-    document_nature:
+    document_template:
       families:
         company: Société
         relations: Relations
